--- a/app/globals.css
+++ b/app/globals.css
@@ -169,3 +169,7 @@ div[class*="block-tooltip"] {
 .input-text-field {
   @apply w-full bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500
 }
+
+.error-notify {
+  @apply text-red-600 text-sm
+}
